[build-system]
build-backend = 'trampolim'
backend-path = ['.']
requires = [
  'toml',
  'packaging',
  'backports.cached-property ; python_version < "3.8"',
]

[project]
name = 'trampolim'
version = '0.0.1'
description = 'A modern Python build backend'
readme = 'README.md'
requires-python = '>=3.7'
license = { file = 'LICENSE' }
keywords = ['build', 'pep517', 'package', 'packaging']
authors = [
  { name = 'Filipe Laíns', email = 'lains@riseup.net' },
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python'
]

dependencies = [
  'toml',
  'packaging',
  'backports.cached-property ; python_version < "3.8"',
]

[project.optional-dependencies]
cli = [
  'rich',
]
pretty = [
  'rich',
]
test = [
  'wheel',
  'pytest',
  'pytest-cov',
  'pytest-mock',
]

[project.scripts]
trampolim = 'trampolim.__main__:entrypoint'

[project.urls]
homepage = 'https://github.com/FFY00/trampolim'
documentation = 'https://github.com/FFY00/trampolim'
repository = 'https://github.com/FFY00/trampolim'
changelog = 'https://github.com/FFY00/trampolim/blob/master/CHANGELOG.rst'
